# aeroroute-api

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_airport_catalogue.py  0002_optimization_runs.py  0003_run_output_snapshot.py  0004_run_lifecycle.py  0005_explanations.py  0006_navigation_snapshots.py  0007_flight_plans.py
scripts/: __init__.py  validate_openapi_contract.py
src/aeroroute_api/: __init__.py  config.py  main.py
src/aeroroute_api/api/: dependencies.py  errors.py  observability.py
src/aeroroute_api/api/routers/: airports.py  assurance.py  data_sources.py  dispatch.py  explanations.py  flight_plans.py  icao_fpl.py  navigation.py  operational.py  operator_approval.py  optimizations.py  weather.py
src/aeroroute_api/application/dto/: airports.py  assurance.py  data_sources.py  dispatch.py  explanation.py  flight_plan.py  icao_fpl.py  navigation.py  operational.py  operator_approval.py  optimization.py  weather.py
src/aeroroute_api/application/services/: airport_catalogue.py  airway_graph.py  data_sources.py  execution_guard.py  explanation.py  explanation_provider.py  flight_planning.py  icao_fpl.py  navigation.py  ofp_pdf.py  optimization.py  route_support.py  terminal_options.py  weather_snapshot.py
src/aeroroute_api/cli/: main.py
src/aeroroute_api/domain/: ports.py
src/aeroroute_api/infrastructure/datasets/: active_catalogue.py  airport_bundle.py  airport_importer.py
src/aeroroute_api/infrastructure/db/: explanations.py  flight_plans.py  models.py  optimization_runs.py  session.py
src/aeroroute_api/infrastructure/explanations/: mlx_client.py
src/aeroroute_api/infrastructure/navigation/: airac.py
src/aeroroute_api/infrastructure/weather/: cache.py  interpolation.py  open_meteo.py
tests/integration/: test_postgis_catalogue.py
tests/unit/: test_airac_navigation.py  test_airport_bundle.py  test_airport_search.py  test_assurance_readiness.py  test_dispatch_readiness.py  test_errors.py  test_execution_guard.py  test_explanation.py  test_explanation_persistence.py  test_explanation_provider.py  test_flight_plan_persistence.py  test_flight_planning.py  test_health.py  test_icao_fpl.py  test_mlx_client.py  test_navigation_concurrency.py  test_non_operational_boundary.py  test_observability.py  test_ofp_pdf.py  test_open_meteo.py  test_openapi_contract.py  test_operational_readiness.py  test_operator_approval_readiness.py  test_optimization_detail.py  test_optimization_persistence.py  test_optimization_service.py  test_preoperational_acceptance.py  test_route_support.py  test_weather_cache.py  test_weather_field.py  test_weather_interpolation.py  test_weather_optimization.py
