[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeroroute-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "geoalchemy2>=0.17",
  "greenlet>=3.0",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30"
]

[project.scripts]
aeroroute = "aeroroute_api.cli.main:main"

[dependency-groups]
dev = ["httpx>=0.28", "pytest>=8.0", "ruff>=0.11"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
