[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeroroute-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aeroroute-optimizer>=0.1.0",
  "alembic>=1.16",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "geoalchemy2>=0.17",
  "greenlet>=3.0",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30"
]

[tool.uv.sources]
aeroroute-optimizer = { path = "../aeroroute-optimizer", editable = true }

[project.scripts]
aeroroute = "aeroroute_api.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
