[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeroroute-api"
version = "0.14.0"
requires-python = ">=3.12"
dependencies = [
  "aeroroute-optimizer>=0.2.1",
  "alembic>=1.16",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "geoalchemy2>=0.17",
  "greenlet>=3.0",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
performance-openap = ["aeroroute-optimizer[openap]>=0.2.1"]

[tool.uv.sources]
aeroroute-optimizer = { path = "../aeroroute-optimizer", editable = true }

[project.scripts]
aeroroute = "aeroroute_api.cli.main:main"

[dependency-groups]
dev = ["mypy>=1.0", "pypdf>=6.0", "pytest>=8.0", "ruff>=0.11"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
module = ["aeroroute_optimizer.*", "reportlab.*"]
ignore_missing_imports = true

# Pre-existing type errors surfaced by adding mypy to this repo for the first
# time (Fable 5 diagnostic finding #9), not introduced by that change. Left
# as a named, tracked follow-up rather than fixed or silently ignored file-
# wide with no record: ofp_pdf.py's table-builder helpers pass loosely-typed
# list[object] rows into reportlab APIs (32 cascading attr-defined errors);
# open_meteo.py and airport_importer.py call float()/int() on values decoded
# from untyped JSON; airac.py spreads a **dict[str, object] kwargs bag into
# httpx.AsyncClient.get(); a few call sites pass a plain str where a
# Literal["SID", "STAR"] is expected. New code in these modules should still
# be written to type-check cleanly; this override only mutes the existing
# backlog so `make check` stays a meaningful gate for everything else.
[[tool.mypy.overrides]]
module = [
  "aeroroute_api.application.services.ofp_pdf",
  "aeroroute_api.application.services.flight_planning",
  "aeroroute_api.application.services.airway_graph",
  "aeroroute_api.application.services.navigation",
  "aeroroute_api.infrastructure.navigation.airac",
  "aeroroute_api.infrastructure.weather.open_meteo",
  "aeroroute_api.infrastructure.datasets.airport_importer",
  "aeroroute_api.cli.main",
]
ignore_errors = true
